# zotpilot

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  app.py  pyproject.toml  streamlit_app.py
evaluation/: calculate_metrics.py  download_beir.py  run_evaluation.py  run_retrieval.py
paperchat/: cli.py  embeddings.py  llm.py
paperchat/core/: __init__.py  embeddings.py  ingestion.py  llm.py  rag_pipeline.py  retrieval.py  vector_store.py
paperchat/llms/: __init__.py  anthropic.py  common.py  gemini.py  manager.py  openai.py
paperchat/ui/: __init__.py  api_settings.py  chat.py  common.py  document.py  settings.py
paperchat/utils/: api_keys.py  config.py  formatting.py  logging.py  settings.py
tests/: test_api_keys.py  test_chunking.py  test_embeddings.py  test_ingestion.py  test_llm_providers.py  test_rag_pipeline.py  test_retrieval.py  test_vector_store.py
zotpilot/: chunking.py  cli.py  embeddings.py  ingestion.py  llm.py  retrieval.py  settings.py
zotpilot/utils/: config.py  formatting.py  settings.py
