[project]
name = "zotpilot"
version = "0.1.0"
description = "An AI-powered copilot for Zotero that enables conversational interaction with your research library."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=0.6.3",
    "docling>=2.25",
    "openai>=1.61.1",
    "pydantic>=2.10.6",
    "sentence-transformers>=3.4.1",
    "streamlit>=1.42.0",
    "torch>=2.6.0",
    "typer",
]

[dependency-groups]
dev = [
    "pre-commit>=4.1.0",
    "pytest>=8.3.4",
    "ruff>=0.9.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--log-cli-level=INFO -s --durations=0"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
  "E",   # pycodestyle
  "W",
  "F",   # pyflakes
  "PL",  # pylint
  "I",   # isort
  "B",   # flake8-bugbear
  "SIM", # flake8-simplify
  "C4",  # flake8-comprehensions
  "RUF", # ruff
]
fixable = ["ALL"]
ignore = [
  "PLR0913", # too many arguments
  "PLR0914", # too many local variables
  "PLR0917", # too many positional arguments
  "PLR2004", # magic number
  "PLW2901", # for loop variable overwritten by assignment target
  "E501",    # line too long
  "B008",    # function-call-in-default-argument
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402", "F401", "D104"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
