[project]
name = "paperchat"
version = "0.1.0"
description = "An AI-powered assistant that enables you to chat with your research library."
authors = [{ name="Kyle Puhger", email="kpuhger@gmail.com" }]
readme = "README.md"
license = { text = "MIT" }
keywords = ["chat", "research"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.50.0",
    "docling>=2.31.0",
    "google-genai>=1.12.1",
    "keyring>=25.6.0",
    "openai>=1.76.0",
    "pymilvus[model]>=2.5.7",
    "streamlit>=1.44.1",
    "torch>=2.6.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.1.0",
    "pytest>=8.3.4",
    "ruff>=0.11.0",
]
eval = [
    "beir>=2.1.0",
    "typer>=0.15.2",
]

[project.scripts]
paperchat = "paperchat.cli:main"

[project.urls]
"Homepage" = "https://github.com/kpeez/paperchat"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--log-cli-level=INFO -s --durations=0"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
  "E",   # pycodestyle
  "W",
  "F",   # pyflakes
  "PL",  # pylint
  "I",   # isort
  "B",   # flake8-bugbear
  "SIM", # flake8-simplify
  "C4",  # flake8-comprehensions
  "RUF", # ruff
]
fixable = ["ALL"]
ignore = [
  "RUF001",  #ambiguous unicode character
  "PLR0913", # too many arguments
  "PLR0914", # too many local variables
  "PLR0917", # too many positional arguments
  "PLR2004", # magic number
  "PLW2901", # for loop variable overwritten by assignment target
  "E501",    # line too long
  "B008",    # function-call-in-default-argument
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402", "F401", "D104"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
